hsmc-macros/tests/ui/t9_3_terminate_in_child.stderr
error: `terminate` is only valid at the root level
  --> tests/ui/t9_3_terminate_in_child.rs:14:9
   |
14 |         terminate(Halt);
   |         ^^^^^^^^^
